added product factory for all products